Bug 37153 - [4.4 Regression] Revision 139210 failed to bootstrap
Summary: [4.4 Regression] Revision 139210 failed to bootstrap
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: 4.4.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-18 19:39 UTC by H.J. Lu
Modified: 2008-08-24 22:46 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2008-08-18 19:39:09 UTC
On Linux/x86-64, I got

cc1: warnings being treated as errors
../../src-trunk/gcc/value-prof.c: In function ‘check_counter’:
../../src-trunk/gcc/value-prof.c:469: error: cast from pointer to integer of different size
../../src-trunk/gcc/value-prof.c:478: error: cast from pointer to integer of different size
make[6]: *** [value-prof.o] Error 1
Comment 1 hjl@gcc.gnu.org 2008-08-18 19:50:00 UTC
Subject: Bug 37153

Author: hjl
Date: Mon Aug 18 19:48:41 2008
New Revision: 139211

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=139211
Log:
2008-08-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/37153
	* value-prof.c (check_counter): Dereference pointer to overall
	count when printing it.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/value-prof.c

Comment 2 H.J. Lu 2008-08-18 20:15:16 UTC
Fixed.