re PR bootstrap/37153 (Revision 139210 failed to bootstrap)

2008-08-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/37153
	* value-prof.c (check_counter): Dereference pointer to overall
	count when printing it.

From-SVN: r139211