gcc/value-prof.c
@@ -466,7 +466,7 @@ check_counter (gimple stmt, const char * name,
         {
 	  inform ("%HCorrecting inconsistent value profile: "
 		  "%s profiler overall count (%d) does not match BB count "
-                  "(%d)", &locus, name, (int)all, (int)bb_count);
+                  "(%d)", &locus, name, (int)*all, (int)bb_count);
 	  *all = bb_count;
 	  if (*count > *all)
             *count = *all;
@@ -475,7 +475,7 @@ check_counter (gimple stmt, const char * name,
       else
 	{
 	  error ("%HCorrupted value profile: %s profiler overall count (%d) "
-                 "does not match BB count (%d)", &locus, name, (int)all,
+                 "does not match BB count (%d)", &locus, name, (int)*all,
                  (int)bb_count);
 	  return true;
 	}
